@@ -1,6 +1,7 @@
 ver 0.21.1 (not yet released)
 * protocol
   - allow escaping quotes in filter expressions
+  - operator "==" never searches substrings in filter expressions
 * decoder
   - ffmpeg: fix build failure with non-standard FFmpeg installation path
   - flac: fix linker failure when building without FLAC support
